Modified Dashboard layout

--- a/assets/Css/dashboard.css
+++ b/assets/Css/dashboard.css
@@ -61,13 +61,13 @@ h3{
 .card_box {
 position: relative;
   width: 220px;
-  height: 250px;
+  height: 225px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 20px 10px;
-  border-radius: 10px;
+  border-radius: 20px;
   backdrop-filter: blur(30px);
   background-color: rgba(65, 65, 65, 0.308);
   border: 1px solid rgba(255, 255, 255, 0.089);
@@ -185,11 +185,12 @@ position: relative;
 .dayoverview{
   display: flex;
   margin: auto;
+  justify-content: space-around;
 }
 .stocks{
   height: 420px;
-  width: 33.33vw;
-  border: 1px white solid;
+  width: 30vw;
+  border: 1px rgb(97, 97, 97) solid;
   margin-top: 15px;
   background-color: #3b8750c0;
   color: white;
@@ -197,7 +198,7 @@ position: relative;
 }
 #coirpot{
   text-align: center;
-  font-size: 1.2em;
+  font-size: 2em;
 }
 
 table, th{
@@ -215,6 +216,7 @@ td{
 }
 .stocktable{
   width: 99%;
+  font-size: 1.5em;
 }
 .quantity{
   text-align: right;
