--- a/assets/Css/emmanager.css
+++ b/assets/Css/emmanager.css
@@ -77,7 +77,7 @@ body{
 }
 .current-emp{
     width: 100%;
-    background-color: white;
+    backdrop-filter: blur(15px);
 }
 .permanant-em-table th,tr,td{
     border: 1px solid black;
@@ -86,4 +86,8 @@ body{
 }
 .permanant-em-table{
     width: 100%;
+}
+.permanant-emp h3{
+    text-align: center;
+    padding-top: 25px;
 }
