--- a/assets/Css/index.css
+++ b/assets/Css/index.css
@@ -81,3 +81,10 @@ form button:hover{
     border: 1px solid white;
     color: white;
 }
+.error-message {
+    color: white;
+    background-color: red; 
+    padding: 10px;
+    margin-top: 10px; 
+    border-radius: 5px;
+}
